documentation for T90 algorithm

--- a/BHRad/Modelling/BHawk_Modelling.ipynb
+++ b/BHRad/Modelling/BHawk_Modelling.ipynb
@@ -312,9 +312,7 @@
     "#   Integrate for the total flux\n",
     "#   for each time t\n",
     "#       if integrate from initial time to t  > 0.1*total flux\n",
-    "\n",
-    "#lat_lc = list(hardness['EdndE-200GeV'])\n",
-    "#gbm_lc = list(hardness['EdndE-8keV'])\n",
+    "#   T90 = remaining time at t break - final time\n",
     "\n",
     "sens = 10**-9 /u.s /u.cm**2\n",
     "\n",
@@ -328,16 +326,18 @@
     "        \n",
     "        # Min flux at a given distance to be detected is \\phi = sens * 4pi d^2\n",
     "        minimum_flux = 4 * 3.14159 * dist.to('cm').value**2 * sens.value # ends up being /s\n",
-    "        interval = np.where(lightcurve > minimum_flux)[0] # Only integrate flux exceeding minimum\n",
+    "        interval = np.where(lightcurve > minimum_flux)[0] # Only integrate flux exceeding minimum flux required\n",
     "\n",
-    "        if interval.shape[0] != 0:\n",
-    "            flux_at_distance = lightcurve/(4*3.14159 *dist.to('cm')**2) # Bring that flux down to the correct amt.\n",
+    "        if interval.shape[0] != 0: # As long as the flux is at all visible.\n",
+    "            flux_at_distance = lightcurve/(4*3.14159 *dist.to('cm')**2) # Inverse square law\n",
     "\n",
-    "            total_flux = I.simps(x = time[interval], y = flux_at_distance[interval]) # This is the total flux\n",
+    "            total_flux = I.simps(x = time[interval], y = flux_at_distance[interval]) # Total flux -- the T90 is the threshold for 10% of this value\n",
     "            \n",
-    "            i = 0\n",
-    "            cum_flux = 0.\n",
-    "            while cum_flux < 1e-1*total_flux: # Break if the cumulative flux is large enough\n",
+    "            # Iterate over the available interval and find the 10% threshold\n",
+    "            i = 0 # Record what interval we break at\n",
+    "            cum_flux = 0. # Flux we're evaluating\n",
+    "            while cum_flux < 1e-1*total_flux: # Break if the cumulative flux is 10% of total\n",
+    "                # Technically I could make this O(N) by coding the integration myself, but this runs fast enough\n",
     "                cum_flux = I.simps(x = time[interval[:i+1]], y = flux_at_distance[interval[:i+1]]) # This is the partial flux on the limited interval\n",
     "                i+=1\n",
     "\n",
