Added some more clarification comments

--- a/BHRad/Modelling/BHawk_Modelling.ipynb
+++ b/BHRad/Modelling/BHawk_Modelling.ipynb
@@ -254,15 +254,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This function exists only because the time interval contains a bunch of duplicates with different y-values\n",
+    "# If time has values x1=x2 with different values y1!=y2, this function simply looks for the nearest x3!=x1 and computes the trapezoidal area with that new coordinate\n",
+    "\n",
     "def Riemann_Integrate(x, y, threshold = np.infty, verbose = False):\n",
     "    \"\"\"\n",
-    "    Reimann Integration returning trapezoidal dx*dy + 0.5*dx*dy\n",
+    "    Reimann Integration returning trapezoidal integration so long as cumulative sum < threshold\n",
     "    Input real-valued x-,y-data as np.array\n",
-    "    Returns trapezoidal integration value with final index; if threshold is a float64, returns the integrated value up to that point + index\n",
+    "    Returns integrated value & index at which threhold was met\n",
+    "\n",
     "    NOTABLY: Skips over repeated x-data by taking the lowest y of repeated indices x and matching it to the next non-repeating index x\n",
     "    \"\"\"\n",
     "\n",
@@ -297,7 +301,7 @@
     "        i += j\n",
     "\n",
     "        if threshold <= cum_int:\n",
-    "            # Break if we meet threshold\n",
+    "            # Break if sum meets threshold\n",
     "            return cum_int, i\n",
     "\n",
     "    # Return cumulative sum the index stopped on\n",
@@ -311,14 +315,14 @@
    "outputs": [],
    "source": [
     "# We know that the T90 for an EBH is bounded to the right by a sharp cutoff.\n",
-    "# So the left-bound is the time for 10% of total flux.\n",
+    "# i.e. T95 is virtually = T100\n",
     "\n",
     "# Algorithm:\n",
-    "# for each distance d\n",
-    "#   The flux interval is bounded by the index of d\n",
+    "# for each given distance d (arbitrary range)\n",
+    "#   Impose a cutoff for the fluxes which reach the telescope (sens.)\n",
+    "#\n",
     "#   Integrate for the total flux\n",
-    "#   for each time t\n",
-    "#       if integrate from initial time to t  > 0.1*total flux\n",
+    "#   Compute \n",
     "#   T90 = remaining time at t break - final time\n",
     "\n",
     "sens = 10**-9 /u.s /u.cm**2\n",
@@ -328,28 +332,37 @@
     "bgo_d = d(bgo_lc/u.s).to('pc')\n",
     "\n",
     "def calculate_t90(distance, lightcurve, ratio = 1e-1):\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
     "    t90 = []\n",
-    "    for dist in distance[np.where(time>0.1)]: # All distances corresponding to >1ms of remaining BH lifetime\n",
+    "    for dist in distance: # All distances corresponding to >1ms of remaining BH lifetime\n",
     "        \n",
     "        # Min flux at a given distance to be detected is \\phi = sens * 4pi d^2\n",
-    "        minimum_flux = 4 * 3.14159 * dist.to('cm').value**2 * sens.value # ends up being /s\n",
-    "        interval = np.where(lightcurve > minimum_flux)[0] # Only integrate flux exceeding minimum flux required\n",
+    "        minimum_flux = 4 * 3.14159 * dist.to('cm').value**2 * sens.value # There is some unit conversion here, because some of the distances might be in parsecs.\n",
+    "\n",
+    "        # Impose that only fluxes > minimum_flux are included in computation\n",
+    "        interval = np.where(lightcurve > minimum_flux)[0] \n",
     "\n",
     "        if interval.shape[0] != 0: # As long as the flux is at all visible.\n",
     "\n",
-    "            flux_at_distance = lightcurve/(4*3.14159 *dist.to('cm')**2) # Inverse square law\n",
+    "            # Apply inverse square law to the lightcurve\n",
+    "            flux_at_distance = lightcurve/(4*3.14159 *dist.to('cm')**2) \n",
     "\n",
-    "            total_flux = Riemann_Integrate(x = np.array(time[interval]), y = flux_at_distance.value[interval])[0] # Total flux -- the T90 is the threshold for 10% of this value\n",
+    "            # Calculat the total flux across the interval\n",
+    "            total_flux = Riemann_Integrate(x = np.array(time[interval]), y = flux_at_distance.value[interval])[0] # Index 0 is the integral-value\n",
     "            \n",
-    "            # Iterate over the available interval and find the 10% threshold\n",
-    "            i = Riemann_Integrate(x = np.array(time[interval]), y = flux_at_distance[interval].value, threshold = ratio*total_flux)[1]\n",
-    "            #print(i)\n",
+    "            # Integrate again, but this time, stop when flux > 10% of total flux\n",
+    "            i = Riemann_Integrate(x = np.array(time[interval]), y = flux_at_distance[interval].value, threshold = ratio*total_flux)[1] # Index 1 is the index-value where 10% total flux is achieved\n",
+    "            \n",
+    "            # The remaining lifetime from the stopping index to the end of the allowed interval is the T90)\n",
     "            t90.append( time[interval].to_list()[i] - time[interval].to_list()[-1])\n",
     "\n",
     "        else:\n",
-    "            t90.append(0.)\n",
+    "            t90.append(0.) # If flux is invisible, T90 is 0.\n",
     "\n",
-    "    return t90, distance[np.where(time>0.1)]"
+    "    return t90"
    ]
   },
   {
@@ -369,9 +382,17 @@
     }
    ],
    "source": [
-    "lat_t90, lat_d_range = calculate_t90(lat_d, lat_lc)\n",
-    "gbm_t90, gbm_d_range = calculate_t90(gbm_d, gbm_lc)\n",
-    "bgo_t90, bgo_d_range = calculate_t90(bgo_d, bgo_lc)\n",
+    "# We have the integrated LAT lcs from earlier.\n",
+    "\n",
+    "# Calculate the distances d that we should sample\n",
+    "lat_d_range = lat_d[np.where(time>0.1)] # This is just an arbitrary list of distances at which to check T90\n",
+    "lat_t90 = calculate_t90(lat_d_range, lat_lc)\n",
+    "\n",
+    "gbm_d_range = gbm_d[np.where(time>0.1)] # Do the same for each detector\n",
+    "gbm_t90 = calculate_t90(gbm_d_range, gbm_lc)\n",
+    "\n",
+    "bgo_d_range = bgo_d[np.where(time>0.1)]\n",
+    "bgo_t90 = calculate_t90(bgo_d_range, bgo_lc)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "ax.step(lat_d_range, lat_t90, label = 'LAT T90')\n",
