Couple more comments

--- a/BHRad/Modelling/BHawk_Modelling.ipynb
+++ b/BHRad/Modelling/BHawk_Modelling.ipynb
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -384,16 +384,21 @@
    "source": [
     "# We have the integrated LAT lcs from earlier.\n",
     "\n",
-    "# Calculate the distances d that we should sample\n",
-    "lat_d_range = lat_d[np.where(time>0.1)] # This is just an arbitrary list of distances at which to check T90\n",
+    "# Calculate the distances d to sample\n",
+    "# I took the previous distance function graph, and just took distances up to around 100ms lifetime remaining \n",
+    "# -- just past the peak at 156ms lifetime remaining\n",
+    "lat_d_range = lat_d[np.where(time>0.1)]\n",
+    "\n",
     "lat_t90 = calculate_t90(lat_d_range, lat_lc)\n",
     "\n",
-    "gbm_d_range = gbm_d[np.where(time>0.1)] # Do the same for each detector\n",
+    "# Do the same for each detector\n",
+    "gbm_d_range = gbm_d[np.where(time>0.1)] \n",
     "gbm_t90 = calculate_t90(gbm_d_range, gbm_lc)\n",
     "\n",
     "bgo_d_range = bgo_d[np.where(time>0.1)]\n",
     "bgo_t90 = calculate_t90(bgo_d_range, bgo_lc)\n",
     "\n",
+    "# Plot\n",
     "fig, ax = plt.subplots()\n",
     "ax.step(lat_d_range, lat_t90, label = 'LAT T90')\n",
     "ax.step(gbm_d_range, gbm_t90, label = 'NaI T90')\n",
