Added more documentation

--- a/BHRad/Modelling/BHawk_Modelling.ipynb
+++ b/BHRad/Modelling/BHawk_Modelling.ipynb
@@ -259,15 +259,17 @@
    "outputs": [],
    "source": [
     "# This function exists only because the time interval contains a bunch of duplicates with different y-values\n",
-    "# If time has values x1=x2 with different values y1!=y2, this function simply looks for the nearest x3!=x1 and computes the trapezoidal area with that new coordinate\n",
+    "# If time has values x1=x2 with different values y1!=y2, this function simply looks for the nearest x3!=x1 and \n",
+    "#   computes the trapezoidal area from x1 to x3\n",
     "\n",
     "def Riemann_Integrate(x, y, threshold = np.infty, verbose = False):\n",
     "    \"\"\"\n",
     "    Reimann Integration returning trapezoidal integration so long as cumulative sum < threshold\n",
     "    Input real-valued x-,y-data as np.array\n",
-    "    Returns integrated value & index at which threhold was met\n",
+    "    Returns integrated value & index at which threshold was met (default infinity)\n",
     "\n",
-    "    NOTABLY: Skips over repeated x-data by taking the lowest y of repeated indices x and matching it to the next non-repeating index x\n",
+    "    NOTABLY: Skips over repeated x-data by taking the lowest y of repeated indices x and \n",
+    "        matching it to the next non-repeating index x\n",
     "    \"\"\"\n",
     "\n",
     "    cum_int = 0.\n",
@@ -295,7 +297,8 @@
     "        cum_int += area\n",
     "\n",
     "        if verbose:\n",
-    "            print('Index %s to %s: dx = x[i+j] %s - x[i] %s and dy = y[i+j] %s - y[i] %s to running total %s'%(i, j, x[i+j], x[i], y[i+j], y[i], cum_int))\n",
+    "            print('Index %s to %s: dx = x[i+j] %s - x[i] %s and dy = y[i+j] %s - y[i] %s to running total %s'%\n",
+    "                (i, j, x[i+j], x[i], y[i+j], y[i], cum_int))\n",
     "\n",
     "        # Update index\n",
     "        i += j\n",
@@ -310,51 +313,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We know that the T90 for an EBH is bounded to the right by a sharp cutoff.\n",
-    "# i.e. T95 is virtually = T100\n",
-    "\n",
-    "# Algorithm:\n",
-    "# for each given distance d (arbitrary range)\n",
-    "#   Impose a cutoff for the fluxes which reach the telescope (sens.)\n",
-    "#\n",
-    "#   Integrate for the total flux\n",
-    "#   Compute \n",
-    "#   T90 = remaining time at t break - final time\n",
-    "\n",
+    "# Point source sensitivity\n",
     "sens = 10**-9 /u.s /u.cm**2\n",
     "\n",
     "lat_d = d(lat_lc/u.s).to('pc')\n",
     "gbm_d = d(gbm_lc/u.s).to('pc')\n",
     "bgo_d = d(bgo_lc/u.s).to('pc')\n",
     "\n",
-    "def calculate_t90(distance, lightcurve, ratio = 1e-1):\n",
+    "def calculate_t90(distances, lightcurve, ratio = 1e-1):\n",
     "    \"\"\"\n",
-    "    \n",
+    "    Input an arbitrary array of distances d & the lightcurve. Determine a cutoff ratio (default 10% total flux).\n",
+    "    Returns an array of T90s corresponding to the distances array\n",
+    "\n",
+    "\n",
+    "    ALGORITHM:\n",
+    "\n",
+    "    We know that the T90 for an EBH is bounded to the right by a sharp cutoff.\n",
+    "    i.e. T95 is virtually = T100\n",
+    "\n",
+    "    for each given distance d (arbitrary range)\n",
+    "\n",
+    "        Impose a mininum flux cutoff for the fluxes which reach the telescope (according to sensitivity)\n",
+    "\n",
+    "        Integrate for the total flux\n",
+    "\n",
+    "        Compute the index at which the cumulative flux = 10% total flux (see Riemann_Integrate)\n",
+    "\n",
+    "        T90 = remaining time at t break - final time\n",
     "    \"\"\"\n",
     "    \n",
     "    t90 = []\n",
-    "    for dist in distance: # All distances corresponding to >1ms of remaining BH lifetime\n",
+    "    for dist in distances: # All distances corresponding to >1ms of remaining BH lifetime\n",
     "        \n",
     "        # Min flux at a given distance to be detected is \\phi = sens * 4pi d^2\n",
-    "        minimum_flux = 4 * 3.14159 * dist.to('cm').value**2 * sens.value # There is some unit conversion here, because some of the distances might be in parsecs.\n",
+    "        minimum_flux = 4 * 3.14159 * dist.to('cm').value**2 * sens.value # Unit conversion, because below I input an astropy array in parsecs\n",
     "\n",
     "        # Impose that only fluxes > minimum_flux are included in computation\n",
     "        interval = np.where(lightcurve > minimum_flux)[0] \n",
     "\n",
     "        if interval.shape[0] != 0: # As long as the flux is at all visible.\n",
     "\n",
-    "            # Apply inverse square law to the lightcurve\n",
-    "            flux_at_distance = lightcurve/(4*3.14159 *dist.to('cm')**2) \n",
-    "\n",
     "            # Calculat the total flux across the interval\n",
-    "            total_flux = Riemann_Integrate(x = np.array(time[interval]), y = flux_at_distance.value[interval])[0] # Index 0 is the integral-value\n",
+    "            total_flux = Riemann_Integrate( x = np.array(time[interval]), \\\n",
+    "                y = lightcurve[interval] )[0] # Index 0 is the integral-value\n",
     "            \n",
     "            # Integrate again, but this time, stop when flux > 10% of total flux\n",
-    "            i = Riemann_Integrate(x = np.array(time[interval]), y = flux_at_distance[interval].value, threshold = ratio*total_flux)[1] # Index 1 is the index-value where 10% total flux is achieved\n",
+    "            i = Riemann_Integrate( x = np.array(time[interval]), \\\n",
+    "                y = lightcurve[interval], \\\n",
+    "                threshold = ratio*total_flux )[1] # Index 1 is the index-value where 10% total flux is achieved\n",
     "            \n",
     "            # The remaining lifetime from the stopping index to the end of the allowed interval is the T90)\n",
     "            t90.append( time[interval].to_list()[i] - time[interval].to_list()[-1])\n",
@@ -367,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +392,7 @@
     }
    ],
    "source": [
-    "# We have the integrated LAT lcs from earlier.\n",
+    "# We have the integrated LAT lightcurves from earlier: lat_lc, gbm_lc (corresponding to NaI) and bgo_lc\n",
     "\n",
     "# Calculate the distances d to sample\n",
     "# I took the previous distance function graph, and just took distances up to around 100ms lifetime remaining \n",
