Modelling rework (partial) for GBM

--- a/BHRad/GBM_Catalog_Searching/Widened_GRB_search.ipynb
+++ b/BHRad/GBM_Catalog_Searching/Widened_GRB_search.ipynb
@@ -787,26 +787,393 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>gcn_name</th>\n",
+       "      <th>time</th>\n",
+       "      <th>trigger_met</th>\n",
+       "      <th>ra_x</th>\n",
+       "      <th>dec_x</th>\n",
+       "      <th>lii_x</th>\n",
+       "      <th>bii_x</th>\n",
+       "      <th>error_radius_x</th>\n",
+       "      <th>redshift</th>\n",
+       "      <th>...</th>\n",
+       "      <th>hardness</th>\n",
+       "      <th>flux_ratio_error</th>\n",
+       "      <th>flux_ene_ratio_error</th>\n",
+       "      <th>fluence_ratio_error</th>\n",
+       "      <th>hardness_error</th>\n",
+       "      <th>like_gbm-lat_time_difference</th>\n",
+       "      <th>gbm-lle_t90_difference</th>\n",
+       "      <th>hardness_upper</th>\n",
+       "      <th>gbm_t9050_upper_bound</th>\n",
+       "      <th>gbm_t9050_lower_bound</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>GRB180210517</td>\n",
+       "      <td>b'GRB180210A      '</td>\n",
+       "      <td>58159.517107</td>\n",
+       "      <td>5.399583e+08</td>\n",
+       "      <td>1.830</td>\n",
+       "      <td>18.490</td>\n",
+       "      <td>108.5329</td>\n",
+       "      <td>-43.1449</td>\n",
+       "      <td>0.120</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.016764</td>\n",
+       "      <td>4.585010</td>\n",
+       "      <td>3.317481</td>\n",
+       "      <td>0.080781</td>\n",
+       "      <td>3.362132</td>\n",
+       "      <td>-18.964</td>\n",
+       "      <td>38.913</td>\n",
+       "      <td>11.378896</td>\n",
+       "      <td>2.777012</td>\n",
+       "      <td>2.048509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>208</th>\n",
+       "      <td>GRB120915000</td>\n",
+       "      <td>b'GRB120915A      '</td>\n",
+       "      <td>56185.000474</td>\n",
+       "      <td>3.693600e+08</td>\n",
+       "      <td>240.950</td>\n",
+       "      <td>57.040</td>\n",
+       "      <td>88.0620</td>\n",
+       "      <td>44.9119</td>\n",
+       "      <td>1.760</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.932213</td>\n",
+       "      <td>0.332156</td>\n",
+       "      <td>0.114388</td>\n",
+       "      <td>0.111673</td>\n",
+       "      <td>7.465616</td>\n",
+       "      <td>-0.550</td>\n",
+       "      <td>0.576</td>\n",
+       "      <td>15.397829</td>\n",
+       "      <td>6.029122</td>\n",
+       "      <td>-2.429122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>GRB220408311</td>\n",
+       "      <td>b'GRB220408B      '</td>\n",
+       "      <td>59677.311157</td>\n",
+       "      <td>6.710957e+08</td>\n",
+       "      <td>92.480</td>\n",
+       "      <td>-50.970</td>\n",
+       "      <td>258.8511</td>\n",
+       "      <td>-27.0772</td>\n",
+       "      <td>0.060</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>32.573197</td>\n",
+       "      <td>6.949773</td>\n",
+       "      <td>1.359339</td>\n",
+       "      <td>0.029807</td>\n",
+       "      <td>31.307608</td>\n",
+       "      <td>-6.624</td>\n",
+       "      <td>32.513</td>\n",
+       "      <td>63.880805</td>\n",
+       "      <td>4.159884</td>\n",
+       "      <td>2.524533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>GRB180703876</td>\n",
+       "      <td>b'GRB180703A      '</td>\n",
+       "      <td>58302.876157</td>\n",
+       "      <td>5.523445e+08</td>\n",
+       "      <td>6.560</td>\n",
+       "      <td>-67.100</td>\n",
+       "      <td>306.7281</td>\n",
+       "      <td>-49.8421</td>\n",
+       "      <td>0.330</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.877799</td>\n",
+       "      <td>13.478790</td>\n",
+       "      <td>8.985856</td>\n",
+       "      <td>0.115725</td>\n",
+       "      <td>7.117189</td>\n",
+       "      <td>-2.304</td>\n",
+       "      <td>13.619</td>\n",
+       "      <td>14.994988</td>\n",
+       "      <td>4.232524</td>\n",
+       "      <td>2.517476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>GRB181028590</td>\n",
+       "      <td>b'GRB181028A      '</td>\n",
+       "      <td>58419.590069</td>\n",
+       "      <td>5.624286e+08</td>\n",
+       "      <td>88.922</td>\n",
+       "      <td>-21.981</td>\n",
+       "      <td>227.3435</td>\n",
+       "      <td>-21.6821</td>\n",
+       "      <td>0.306</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.248896</td>\n",
+       "      <td>0.278362</td>\n",
+       "      <td>0.143487</td>\n",
+       "      <td>0.161529</td>\n",
+       "      <td>4.833115</td>\n",
+       "      <td>-24.632</td>\n",
+       "      <td>29.697</td>\n",
+       "      <td>10.082011</td>\n",
+       "      <td>3.067836</td>\n",
+       "      <td>1.393853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>GRB190531840</td>\n",
+       "      <td>b'GRB190531B      '</td>\n",
+       "      <td>58634.840417</td>\n",
+       "      <td>5.810262e+08</td>\n",
+       "      <td>24.390</td>\n",
+       "      <td>-41.950</td>\n",
+       "      <td>273.4221</td>\n",
+       "      <td>-72.4336</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.184728</td>\n",
+       "      <td>3.062354</td>\n",
+       "      <td>1.327302</td>\n",
+       "      <td>0.043558</td>\n",
+       "      <td>16.132658</td>\n",
+       "      <td>-6.240</td>\n",
+       "      <td>31.443</td>\n",
+       "      <td>35.317386</td>\n",
+       "      <td>3.210816</td>\n",
+       "      <td>2.307847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GRB190731943</td>\n",
+       "      <td>b'GRB190731A      '</td>\n",
+       "      <td>58695.943322</td>\n",
+       "      <td>5.863055e+08</td>\n",
+       "      <td>340.310</td>\n",
+       "      <td>-76.420</td>\n",
+       "      <td>312.1918</td>\n",
+       "      <td>-38.2711</td>\n",
+       "      <td>0.310</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12.136621</td>\n",
+       "      <td>2.782806</td>\n",
+       "      <td>1.239458</td>\n",
+       "      <td>0.071361</td>\n",
+       "      <td>10.511273</td>\n",
+       "      <td>1.732</td>\n",
+       "      <td>9.518</td>\n",
+       "      <td>22.647894</td>\n",
+       "      <td>3.538089</td>\n",
+       "      <td>1.853215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131</th>\n",
+       "      <td>GRB140402007</td>\n",
+       "      <td>b'GRB140402A      '</td>\n",
+       "      <td>56749.007014</td>\n",
+       "      <td>4.180902e+08</td>\n",
+       "      <td>207.660</td>\n",
+       "      <td>5.970</td>\n",
+       "      <td>339.2299</td>\n",
+       "      <td>64.5844</td>\n",
+       "      <td>0.160</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.669260</td>\n",
+       "      <td>71.324275</td>\n",
+       "      <td>31.082109</td>\n",
+       "      <td>0.139030</td>\n",
+       "      <td>12.399470</td>\n",
+       "      <td>-0.238</td>\n",
+       "      <td>-1.226</td>\n",
+       "      <td>22.068729</td>\n",
+       "      <td>8.086347</td>\n",
+       "      <td>-3.086347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>GRB210928084</td>\n",
+       "      <td>b'GRB210928A      '</td>\n",
+       "      <td>59485.083692</td>\n",
+       "      <td>6.544872e+08</td>\n",
+       "      <td>245.776</td>\n",
+       "      <td>-17.999</td>\n",
+       "      <td>357.6673</td>\n",
+       "      <td>21.6837</td>\n",
+       "      <td>0.120</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.116773</td>\n",
+       "      <td>4.608649</td>\n",
+       "      <td>1.892793</td>\n",
+       "      <td>0.082957</td>\n",
+       "      <td>5.447874</td>\n",
+       "      <td>-9.950</td>\n",
+       "      <td>4.790</td>\n",
+       "      <td>13.564647</td>\n",
+       "      <td>2.556373</td>\n",
+       "      <td>1.769208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>GRB150523396</td>\n",
+       "      <td>b'GRB150523A      '</td>\n",
+       "      <td>57165.395694</td>\n",
+       "      <td>4.540662e+08</td>\n",
+       "      <td>115.340</td>\n",
+       "      <td>-45.430</td>\n",
+       "      <td>258.6739</td>\n",
+       "      <td>-10.9449</td>\n",
+       "      <td>0.080</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.083893</td>\n",
+       "      <td>6.791340</td>\n",
+       "      <td>6.650011</td>\n",
+       "      <td>0.089496</td>\n",
+       "      <td>5.984489</td>\n",
+       "      <td>-2.088</td>\n",
+       "      <td>41.956</td>\n",
+       "      <td>14.068383</td>\n",
+       "      <td>3.947508</td>\n",
+       "      <td>3.052577</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>GRB160821857</td>\n",
+       "      <td>b'GRB160821A      '</td>\n",
+       "      <td>57621.857292</td>\n",
+       "      <td>4.935045e+08</td>\n",
+       "      <td>171.290</td>\n",
+       "      <td>42.290</td>\n",
+       "      <td>166.5733</td>\n",
+       "      <td>66.7930</td>\n",
+       "      <td>0.120</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14.992157</td>\n",
+       "      <td>1.663456</td>\n",
+       "      <td>1.036846</td>\n",
+       "      <td>0.032620</td>\n",
+       "      <td>7.070218</td>\n",
+       "      <td>26.450</td>\n",
+       "      <td>8.086</td>\n",
+       "      <td>22.062375</td>\n",
+       "      <td>4.103711</td>\n",
+       "      <td>2.896452</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11 rows × 427 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['GRB190731943',\n",
-       " 'GRB180703876',\n",
-       " 'GRB220408311',\n",
-       " 'GRB150523396',\n",
-       " 'GRB190531840',\n",
-       " 'GRB181028590',\n",
-       " 'GRB210928084',\n",
-       " 'GRB140402007',\n",
-       " 'GRB180210517',\n",
-       " 'GRB160821857',\n",
-       " 'GRB120915000']"
+       "             name             gcn_name          time   trigger_met     ra_x  \\\n",
+       "152  GRB180210517  b'GRB180210A      '  58159.517107  5.399583e+08    1.830   \n",
+       "208  GRB120915000  b'GRB120915A      '  56185.000474  3.693600e+08  240.950   \n",
+       "34   GRB220408311  b'GRB220408B      '  59677.311157  6.710957e+08   92.480   \n",
+       "11   GRB180703876  b'GRB180703A      '  58302.876157  5.523445e+08    6.560   \n",
+       "83   GRB181028590  b'GRB181028A      '  58419.590069  5.624286e+08   88.922   \n",
+       "47   GRB190531840  b'GRB190531B      '  58634.840417  5.810262e+08   24.390   \n",
+       "1    GRB190731943  b'GRB190731A      '  58695.943322  5.863055e+08  340.310   \n",
+       "131  GRB140402007  b'GRB140402A      '  56749.007014  4.180902e+08  207.660   \n",
+       "89   GRB210928084  b'GRB210928A      '  59485.083692  6.544872e+08  245.776   \n",
+       "44   GRB150523396  b'GRB150523A      '  57165.395694  4.540662e+08  115.340   \n",
+       "189  GRB160821857  b'GRB160821A      '  57621.857292  4.935045e+08  171.290   \n",
+       "\n",
+       "      dec_x     lii_x    bii_x  error_radius_x  redshift  ...   hardness  \\\n",
+       "152  18.490  108.5329 -43.1449           0.120       0.0  ...   8.016764   \n",
+       "208  57.040   88.0620  44.9119           1.760       0.0  ...   7.932213   \n",
+       "34  -50.970  258.8511 -27.0772           0.060       0.0  ...  32.573197   \n",
+       "11  -67.100  306.7281 -49.8421           0.330       0.0  ...   7.877799   \n",
+       "83  -21.981  227.3435 -21.6821           0.306       0.0  ...   5.248896   \n",
+       "47  -41.950  273.4221 -72.4336           0.100       0.0  ...  19.184728   \n",
+       "1   -76.420  312.1918 -38.2711           0.310       0.0  ...  12.136621   \n",
+       "131   5.970  339.2299  64.5844           0.160       0.0  ...   9.669260   \n",
+       "89  -17.999  357.6673  21.6837           0.120       0.0  ...   8.116773   \n",
+       "44  -45.430  258.6739 -10.9449           0.080       0.0  ...   8.083893   \n",
+       "189  42.290  166.5733  66.7930           0.120       0.0  ...  14.992157   \n",
+       "\n",
+       "     flux_ratio_error  flux_ene_ratio_error  fluence_ratio_error  \\\n",
+       "152          4.585010              3.317481             0.080781   \n",
+       "208          0.332156              0.114388             0.111673   \n",
+       "34           6.949773              1.359339             0.029807   \n",
+       "11          13.478790              8.985856             0.115725   \n",
+       "83           0.278362              0.143487             0.161529   \n",
+       "47           3.062354              1.327302             0.043558   \n",
+       "1            2.782806              1.239458             0.071361   \n",
+       "131         71.324275             31.082109             0.139030   \n",
+       "89           4.608649              1.892793             0.082957   \n",
+       "44           6.791340              6.650011             0.089496   \n",
+       "189          1.663456              1.036846             0.032620   \n",
+       "\n",
+       "     hardness_error like_gbm-lat_time_difference  gbm-lle_t90_difference  \\\n",
+       "152        3.362132                      -18.964                  38.913   \n",
+       "208        7.465616                       -0.550                   0.576   \n",
+       "34        31.307608                       -6.624                  32.513   \n",
+       "11         7.117189                       -2.304                  13.619   \n",
+       "83         4.833115                      -24.632                  29.697   \n",
+       "47        16.132658                       -6.240                  31.443   \n",
+       "1         10.511273                        1.732                   9.518   \n",
+       "131       12.399470                       -0.238                  -1.226   \n",
+       "89         5.447874                       -9.950                   4.790   \n",
+       "44         5.984489                       -2.088                  41.956   \n",
+       "189        7.070218                       26.450                   8.086   \n",
+       "\n",
+       "     hardness_upper  gbm_t9050_upper_bound  gbm_t9050_lower_bound  \n",
+       "152       11.378896               2.777012               2.048509  \n",
+       "208       15.397829               6.029122              -2.429122  \n",
+       "34        63.880805               4.159884               2.524533  \n",
+       "11        14.994988               4.232524               2.517476  \n",
+       "83        10.082011               3.067836               1.393853  \n",
+       "47        35.317386               3.210816               2.307847  \n",
+       "1         22.647894               3.538089               1.853215  \n",
+       "131       22.068729               8.086347              -3.086347  \n",
+       "89        13.564647               2.556373               1.769208  \n",
+       "44        14.068383               3.947508               3.052577  \n",
+       "189       22.062375               4.103711               2.896452  \n",
+       "\n",
+       "[11 rows x 427 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,12 +1187,12 @@
     "#     str += '%s OR '%name\n",
     "# print(str[:-3])\n",
     "\n",
-    "candidates.query('gbm_t9050_upper_bound > 2.4 & gbm_t9050_lower_bound < 3.4').name.to_list()"
+    "candidates.query('gbm_t9050_upper_bound > 2.4 & gbm_t9050_lower_bound < 3.4').sort_values(by='like_gbm_ts')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +1201,7 @@
        "Text(0.5, 1.0, 'LAT T90 for hardness = infty')"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -876,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +1359,7 @@
        "160         0.420814        0.653730              0.275319  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3628,7 +3995,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12 | packaged by conda-forge | (default, Oct 26 2021, 05:57:50) \n[Clang 11.1.0 ]"
+   "version": "3.7.12"
   },
   "orig_nbformat": 4,
   "vscode": {
